changes: some semantic changes on swagger endpoints description
