# docs/swagger.yaml
@@ -31,6 +31,21 @@ paths:
         informaçōes sobre o estoque
       operationId: update-estoque
       parameters:
+      - description: NomeFruta
+        in: path
+        name: nomeFruta
+        required: true
+        type: string
+      - description: NomeFornecedor
+        in: path
+        name: nomeFornecedor
+        required: true
+        type: string
+      - description: Quantidade
+        in: path
+        name: quantidade
+        required: true
+        type: integer
       - description: Estoque
         in: body
         name: estoque
@@ -57,6 +72,47 @@ paths:
           schema:
             type: string
       summary: Atualiza a quantidade de uma fruta no estoque
+  /atualizar/fornecedor:
+    put:
+      description: Atualiza as informaçōes de um fornecedor a partir do seu nome
+      operationId: update-fornecedor
+      parameters:
+      - description: nome
+        in: path
+        name: nome
+        required: true
+        type: string
+      - description: telefone
+        in: path
+        name: telefone
+        required: true
+        type: string
+      - description: Fornecedor
+        in: body
+        name: fornecedor
+        required: true
+        schema:
+          $ref: '#/definitions/model.Fornecedor'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Fornecedor atualizado com sucesso
+          schema:
+            type: string
+        "400":
+          description: Informaçōes inválidas.
+          schema:
+            type: string
+        "404":
+          description: Fornecedor não encontrado
+          schema:
+            type: string
+        "500":
+          description: Falha ao atualizar o fornecedor. Por favor, tente novamente
+          schema:
+            type: string
+      summary: Atualiza as informaçōes de um fornecedor existente
   /atualizar/fruta:
     put:
       description: Atualiza as informações de uma fruta a partir do seu nome
@@ -67,6 +123,11 @@ paths:
         name: nome
         required: true
         type: string
+      - description: preco
+        in: path
+        name: nome
+        required: true
+        type: integer
       - description: Fruta
         in: body
         name: fruta
@@ -210,6 +271,21 @@ paths:
       description: Deleta o estoque de uma fruta associada a um fornecedor
       operationId: delete-estoque
       parameters:
+      - description: NomeFruta
+        in: path
+        name: nomeFruta
+        required: true
+        type: string
+      - description: NomeFornecedor
+        in: path
+        name: nomeFornecedor
+        required: true
+        type: string
+      - description: Quantidade
+        in: path
+        name: quantidade
+        required: true
+        type: integer
       - description: Estoque
         in: body
         name: estoque
@@ -277,7 +353,7 @@ paths:
           schema:
             type: string
       summary: Deleta uma fruta a partir de suas informaçōes
-  /obter/estoque/{nomeFruta}/{nomeFornecedor}:
+  /obter/estoque/{nomeFornecedor}/{nomeFruta}:
     get:
       description: Busca a quantidade de uma fruta fornecida por um fornecedor no
         estoque a partir do nome da fruta e nome do fornecedor
@@ -309,8 +385,7 @@ paths:
           description: Fruta não encontrada em Estoque
           schema:
             type: string
-      summary: Busca a quantidade de uma fruta fornecida por um fornecedor no estoque
-        a partir do nome da fruta e nome do fornecedor
+      summary: Busca a quantidade de uma fruta em estoque associada a um fornecedor
   /obter/fornecedor/{nome}:
     get:
       description: Retorna as informaçōes de um fornecedor a partir de seu nome
@@ -365,4 +440,20 @@ paths:
           schema:
             type: string
       summary: Busca por uma fruta pelo nome
+  /preencher/estoque:
+    post:
+      description: Preencher o estoque de fruta esgotada com 10
+      operationId: fill-estoque
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Estoque preenchido com sucesso
+          schema:
+            type: string
+        "500":
+          description: Falha ao preencher o estoque. Não há frutas esgotadas
+          schema:
+            type: string
+      summary: Preenche o estoque de alguma fruta que esgotou adicionando 10
 swagger: "2.0"
